Just a small typo in the README
That is a really nice package, thanks.

--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,7 @@ points(p)
 ### CRAN version
 
 ```{r, eval = FALSE}
-install.packages("eulerr")
+install.packages("polylabelr")
 ```
 
 ### Development version
