--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,7 @@ y <- c(0, 0, 1, 2, 1, 3, 2, 0)
 p <- polylabelr::poi(x, y, precision = 0.01)
 
 plot.new()
-plot.window(range(x, na.rm = TRUE), range(y, na.rm = TRUE))
+plot.window(range(x, na.rm = TRUE), range(y, na.rm = TRUE), asp = 1)
 polypath(x, y, col = "grey", border = FALSE)
 points(p)
 ```
